# bitacora-medica

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/: BUILD_MACOS.md  MANUAL_USUARIO.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 001_create_cirugias.sql  002_create_fts_index.sql  003_create_triggers_fts.sql  004_rebuild_fts.sql  005_add_deleted_at.sql  006_create_radiografias.sql
src-tauri/src/: db.rs  lib.rs  main.rs
src/components/dashboard/: StatsCharts.tsx  StatsRow.tsx
src/components/forms/: CirugiaForm.tsx
src/components/layout/: MainLayout.tsx  Sidebar.tsx  ThemeToggle.tsx
src/components/radiografias/: RadiografiaCard.tsx  RadiografiaLightbox.tsx  RadiografiaPicker.tsx  RadiografiasSection.tsx
src/components/tables/: CirugiasTable.tsx
src/hooks/: useCirugias.ts  useDebounce.ts  useFileDrop.ts  useIdleLock.ts  useRadiografiaBlobUrl.ts  useRadiografias.ts  useStats.ts
src/lib/: auth.tsx  csv.test.ts  csv.ts  dates.test.ts  dates.ts  db.ts  export.ts  fts.test.ts  fts.ts  radiografias.ts  schemas.test.ts  schemas.ts  settings.tsx  theme.tsx  types.ts
src/pages/: Configuracion.tsx  Dashboard.tsx  DetalleCirugia.tsx  GateScreen.tsx  NuevaCirugia.tsx
