[package]
name = "bitacora-medica"
version = "0.1.0"
description = "Bitacora medica offline para trauma y ortopedia"
authors = ["Bitacora Medica"]
edition = "2021"

[lib]
name = "bitacora_medica_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2.5.1"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-store = "2.4.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
argon2 = "0.5.3"
rusqlite = { version = "0.32", features = ["bundled-sqlcipher-vendored-openssl", "serde_json"] }
rand = "0.8"
hex = "0.4"
parking_lot = "0.12"
thiserror = "1"
